# UCDavis

ECS171/ASS1/: HW1.m  categorizeY.m  costFun.m  dimExpand.m  displayQFive.m  displayQFour.m  displayQSeven.m  displayQSix.m  genCoefs.m  graDescent.m  mse.m  mseLogistic.m  oddTransfer.m  sigmoid.m  singlePolyPlot.m  singlePolyReg.m  yhat.m  yhatLogistic.m
ECS171/hw/hw2/: ECS171_hw2_RScript.R  ECS171_hw2_me.md  ann.py  yeast.txt
ECS171/hw/hw3/: ECS171_hw3_Rhelper.R  gene.ipynb  gene.py  hw3.py
ECS60/hw/programming/hw2p/code/: BTree  CMakeLists.txt  a
ECS60/hw/programming/hw2p/code/Debug/: BTree
ECS60/hw/programming/hw2p/code/a.dSYM/Contents/Resources/DWARF/: a
ECS60/hw/programming/hw2p/code/include/: InternalNode.h
ECS60/hw/programming/hw2p/code/src/: InternalNode.cpp  LeafNode.cpp
STA131B/hw/hw1/: STA131B_hw1.docx
STA131B/hw/hw3/: STA131B_hw3.docx
STA131B/hw/hw4/: STA131B_hw4.docx
STA131B/hw/hw6/: STA131B_hw6.docx
STA131B/hw/hw7/: STA131B_hw7.docx
STA131B/resource/: STA131B_syllabus.doc
STA135/hw/hw10/: STA135_hw10_zz.Rmd
STA135/hw/hw4/: STA135_hw4_me.Rmd
STA135/hw/hw5/: STA135_hw5_me.Rmd
STA135/hw/hw6/: STA135_hw6_zz.Rmd
STA135/hw/hw8/: STA135_hw8_zz.Rmd
STA135/hw/hw9/: STA135_hw9_zz.Rmd
STA135/hw/project/: STA135_final_project.tex
STA141/ASS1/I/: STA141 Assignment 1 Code.R
STA141/hw/hw2/: STA141_hw2_me.Rmd  STA141_hw2_zz.R  STA141_hw_02_me.R
STA141/hw/hw3/: STA141_hw3_me.R  STA141_hw3_me.Rmd
STA141/hw/hw4/: Cars.csv  STA141_hw4_me.R  STA141_hw4_zz.Rmd
STA207/resource/: STA207_syllabus.docx  data_source.md
(+127 files in other folders)
